--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,26 @@ a:active {
     top: -15px;
 }
 
+.button-class-white {
+    color: #fff;
+    margin: 30px 2px;
+}
+
+.button-class-white .top {
+    top: 1px;
+}
+
+.button-class-white .top,
+.button-class-white .bottom,
+.button-class-white .left,
+.button-class-white .right {
+    background-color: #fff;
+}
+
+.button-class-white:hover {
+    color: #fff;
+}
+
 .whole-header {
     width: 100%;
     position: fixed;
@@ -1774,7 +1794,6 @@ form {
 }
 
 .our-work-section {
-    height: 500px;
     background-color: cyan;
 }
 
@@ -1801,6 +1820,29 @@ form {
     position: absolute;
     right: 0;
     top: 17px;
+}
+
+.our-work-section .architecture-block {
+    display: block;
+    height: 640px;
+    margin: 40px 0;
+    border: 2px solid #000;
+}
+
+.our-work-section .interior-block {
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+    margin: 40px 0 20px;
+    border: 2px solid #000;
+}
+
+.our-work-section .planning-block {
+    display: inline-block;
+    width: 100%;
+    height: 300px;
+    margin: 20px 0 40px;
+    border: 2px solid #000;
 }
 
 .home-slider-2 {
@@ -1843,6 +1885,7 @@ form {
     left: 0;
     right: 0;
     bottom: 0;
+    padding-bottom: 72px;
     text-align: right;
     overflow: hidden;
 }
@@ -1903,4 +1946,34 @@ form {
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+}
+
+.testimonial-block {
+    height: 400px;
+}
+
+.testimonial-block h5 {
+    font-size: 30px;
+    line-height: 60px;
+    font-family: aileronregular, sans-serif;
+}
+
+@media (max-width: 767px) {
+    .sidebar {
+        display: none;
+    }
+    .home-slider-2 .carousel-caption {
+        text-align: left;
+        padding-bottom: 50px;
+    }
+    .home-slider-2 .image-part {
+        width: 100%;
+        height: 300px;
+    }
+    .home-slider-2 .carousel-indicators {
+        bottom: 310px;
+        left: 0%;
+        margin-left: 0%;
+        text-align: left;
+    }
 }
