adding updated file from santosh

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,6 +37,8 @@ sans-serif;
 // aileron fonts starts
 $robotoregular: aileronregular,
 sans-serif;
+$aileronlight: aileronlight,
+sans-serif;
 // aileron fonts ends
 
 $darkblue: #01161e; // darkblue color code
