--- a/css/style.css
+++ b/css/style.css
@@ -1039,6 +1039,12 @@ footer {
     transition: fill 0.8s ease;
 }
 
+@media (max-width: 767px) {
+    .svg-heading .svg-element {
+        width: 200px;
+    }
+}
+
 .architecture-box {
     overflow: hidden;
 }
@@ -1648,11 +1654,15 @@ form {
     background-color: #01161e;
 }
 
+.contact-form [class*="col-"] {
+    position: relative;
+}
+
 .contact-form h4 {
     text-align: center;
     text-transform: capitalize;
-    font-size: 30px;
-    font-family: aileronregular, sans-serif;
+    font-size: 40px;
+    font-family: aileronlight, sans-serif;
     font-weight: 200;
     color: #fff;
     margin: 30px 0;
@@ -1665,7 +1675,7 @@ form {
     padding: 10px;
     outline: none;
     color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid #eee;
     background: transparent;
     text-transform: capitalize;
 }
@@ -1678,7 +1688,7 @@ form {
 
 .contact-form input:focus,
 .contact-form textarea:focus {
-    outline: 1px solid #fff;
+    outline: 3px solid #fff;
 }
 
 .contact-form textarea {
@@ -1687,6 +1697,7 @@ form {
 }
 
 .map {
+    display: block;
     z-index: 3;
     position: relative;
 }
@@ -1706,7 +1717,7 @@ form {
 }
 
 .contact-top h3 {
-    font-family: aileronregular, sans-serif;
+    font-family: aileronlight, sans-serif;
     line-height: 50px;
     font-size: 40px;
     margin: 30px 0;
@@ -1726,12 +1737,14 @@ form {
     float: left;
     width: 90%;
     padding: 0 0 0 10px;
+    font-size: 15px;
 }
 
 .contact-top .address-block h4 {
     color: #003d7c;
     text-transform: uppercase;
     line-height: 60px;
+    font-size: 15px;
 }
 
 .contact-top .address-block h4:before {
@@ -1770,6 +1783,9 @@ form {
 
 .contact-top .contact-block a {
     line-height: 30px;
+    display: block;
+    overflow: hidden;
+    margin-bottom: 10px;
 }
 
 .contact-top .contact-block a span:nth-child(1) {
@@ -1781,6 +1797,28 @@ form {
     float: left;
     width: 90%;
     padding: 0 0 10px 10px;
+    word-break: break-word;
+    line-height: 17px;
+}
+
+label.error {
+    color: #fff;
+    position: absolute;
+    bottom: -4px;
+    left: 15px;
+}
+
+@media (max-width: 767px) {
+    .map-outer {
+        margin-top: 20px;
+    }
+    .contact-top h3 {
+        line-height: 40px;
+        font-size: 28px;
+    }
+    .contact-top .contact-block a span:nth-child(2) {
+        line-height: 30px;
+    }
 }
 
 .home-section {
@@ -1791,10 +1829,6 @@ form {
 .about-section {
     height: 500px;
     background-color: #eee;
-}
-
-.our-work-section {
-    background-color: cyan;
 }
 
 .sidebar {
@@ -1824,25 +1858,77 @@ form {
 
 .our-work-section .architecture-block {
     display: block;
-    height: 640px;
+    position: relative;
+    height: 630px;
     margin: 40px 0;
-    border: 2px solid #000;
+    background-image: url("http://via.placeholder.com/768x660");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .our-work-section .interior-block {
     display: inline-block;
+    position: relative;
     width: 100%;
     height: 300px;
-    margin: 40px 0 20px;
-    border: 2px solid #000;
+    margin: 40px 0 15px;
+    background-image: url("http://via.placeholder.com/768x300");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .our-work-section .planning-block {
     display: inline-block;
+    position: relative;
     width: 100%;
     height: 300px;
-    margin: 20px 0 40px;
-    border: 2px solid #000;
+    margin: 15px 0 40px;
+    background-image: url("http://via.placeholder.com/768x300");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+
+.our-work-section .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    opacity: 0;
+    transition: all 1s ease;
+}
+
+.our-work-section h5 {
+    display: inline-block;
+    text-transform: uppercase;
+    color: #000;
+    margin: 10px 0 0 10px;
+}
+
+.our-work-section h4 {
+    position: absolute;
+    left: 20px;
+    bottom: -20px;
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 20px;
+    z-index: 3;
+    transition: all 1s ease;
+}
+
+.overlay-open .overlay {
+    opacity: 1;
+}
+
+.overlay-open h4 {
+    bottom: 20px;
 }
 
 .home-slider-2 {
@@ -1916,7 +2002,8 @@ form {
     background-repeat: no-repeat;
 }
 
-.inverted-box {
+.inverted-box,
+.inverted-box-black {
     width: 90%;
     height: 350px;
     border: 3px solid #fff;
@@ -1924,7 +2011,8 @@ form {
     position: relative;
 }
 
-.inverted-box p {
+.inverted-box p,
+.inverted-box-black p {
     font-size: 14px;
     text-transform: uppercase;
     line-height: 30px;
@@ -1935,9 +2023,12 @@ form {
     position: absolute;
     bottom: 0%;
     left: 10px;
+    width: 100%;
+    font-weight: 700;
 }
 
-.inverted-box h5 {
+.inverted-box h5,
+.inverted-box-black h5 {
     font-size: 30px;
     font-family: aileronregular, sans-serif;
     line-height: 40px;
@@ -1946,6 +2037,12 @@ form {
     width: 100%;
     text-align: center;
     text-transform: uppercase;
+}
+
+.inverted-box-black {
+    border: 3px solid #000;
+    width: 100%;
+    height: 400px;
 }
 
 .testimonial-block {
