--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -7,11 +7,14 @@ form {
 }
 
 .contact-form {
+    [class*="col-"]{
+        position: relative;
+    }
     h4 {
         text-align: center;
         text-transform: capitalize;
-        font-size: 30px;
-        font-family: $robotoregular;
+        font-size: 40px;
+        font-family: $aileronlight;
         font-weight: 200;
         color: $white;
         margin: 30px 0;
@@ -23,7 +26,7 @@ form {
         padding: 10px;
         outline: none;
         color: $white;
-        border: 1px solid $white;
+        border: 1px solid #eee;
         background: transparent;
         text-transform: capitalize;
         &[type="submit"] {
@@ -31,7 +34,7 @@ form {
             outline: 1px solid #fff;
         }
         &:focus {
-            outline: 1px solid #fff;
+            outline: 3px solid #fff;
         }
     }
     textarea {
@@ -41,6 +44,7 @@ form {
 }
 
 .map {
+    display: block;
     z-index: 3;
     position: relative;
 }
@@ -57,30 +61,31 @@ form {
         z-index: 1;
     }
 }
-
 .contact-top {
     h3 {
-        font-family: $robotoregular;
+        font-family: $aileronlight;
         line-height: 50px;
         font-size: 40px;
         margin: 30px 0;
     }
     .address-block {
         margin: 30px 0;
-        span{
-        	float: left;
-        	width:10%;
+        span {
+            float: left;
+            width: 10%;
         }
         address {
             line-height: 30px;
             float: left;
-        	width:90%;
-        	padding: 0 0 0 10px;
+            width: 90%;
+            padding: 0 0 0 10px;
+            font-size: 15px;
         }
         h4 {
             color: $global_nav;
             text-transform: uppercase;
             line-height: 60px;
+            font-size: 15px;
             &:before {
                 content: '';
                 width: 30px;
@@ -114,14 +119,45 @@ form {
         }
         a {
             line-height: 30px;
-            span:nth-child(1){
-            	float: left;
-            	width: 10%;
+            display: block;
+            overflow: hidden;
+            margin-bottom: 10px;
+            span:nth-child(1) {
+                float: left;
+                width: 10%;
             }
-            span:nth-child(2){
-            	float: left;
-            	width: 90%;
-            	padding: 0 0 10px 10px;
+            span:nth-child(2) {
+                float: left;
+                width: 90%;
+                padding: 0 0 10px 10px;
+                word-break: break-word;
+                line-height: 17px;
+            }
+        }
+    }
+}
+
+label.error{
+    color: #fff;
+    position: absolute;
+    bottom: -4px;
+    left: 15px;
+}
+
+@media(max-width:767px) {
+    .map-outer {
+        margin-top: 20px;
+    }
+    .contact-top {
+        h3 {
+            line-height: 40px;
+            font-size: 28px;
+        }
+        .contact-block {
+            a {
+                span:nth-child(2) {
+                    line-height: 30px;
+                }
             }
         }
     }
