--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -8,10 +8,6 @@
     background-color: #eee;
 }
 
-.our-work-section {
-    background-color: cyan;
-}
-
 // sidebar nav bar css starts
 .sidebar {
     position: fixed;
@@ -39,24 +35,74 @@
 // our-work-section css starts
 .our-work-section {
     .architecture-block {
-    	display: block;
-        height: 640px;
+        display: block;
+        position: relative;
+        height: 630px;
         margin: 40px 0;
-        border: 2px solid #000;
+        background-image: url('http://via.placeholder.com/768x660');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        overflow: hidden;
     }
     .interior-block {
         display: inline-block;
+        position: relative;
         width: 100%;
         height: 300px;
-        margin: 40px 0 20px;
-        border: 2px solid #000;
+        margin: 40px 0 15px;
+        background-image: url('http://via.placeholder.com/768x300');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        overflow: hidden;
     }
     .planning-block {
         display: inline-block;
+        position: relative;
         width: 100%;
         height: 300px;
-        margin: 20px 0 40px;
-        border: 2px solid #000;
+        margin: 15px 0 40px;
+        background-image: url('http://via.placeholder.com/768x300');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        overflow: hidden;
+    }
+    .overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: #fff;
+        opacity: 0;
+        transition: all 1s ease;
+    }
+    h5 {
+        display: inline-block;
+        text-transform: uppercase;
+        color: #000;
+        margin: 10px 0 0 10px;
+    }
+    h4 {
+        position: absolute;
+        left: 20px;
+        bottom: -20px;
+        margin: 0;
+        text-transform: uppercase;
+        font-size: 20px;
+        z-index: 3;
+        transition: all 1s ease;
+    }
+}
+
+.overlay-open {
+    .overlay {
+        opacity: 1;
+    }
+    h4 {
+        bottom: 20px;
     }
 }
 
@@ -139,6 +185,8 @@
         position: absolute;
         bottom: 0%;
         left: 10px;
+        width: 100%;
+        font-weight: 700;
     }
     h5 {
         font-size: 30px;
@@ -150,6 +198,13 @@
         text-align: center;
         text-transform: uppercase;
     }
+}
+
+.inverted-box-black {
+    @extend .inverted-box;
+    border: 3px solid #000;
+    width: 100%;
+    height: 400px;
 }
 
 .testimonial-block {
