--- a/sass/_svg-heading.scss
+++ b/sass/_svg-heading.scss
@@ -15,3 +15,11 @@
     stroke-width: 0.3px;
     transition: fill 0.8s ease;
 }
+
+@media(max-width:767px){
+    .svg-heading{
+        .svg-element{
+            width: 200px;
+        }
+    }
+}
